--- a/Python/test.in
+++ b/Python/test.in
@@ -1,7 +1,7 @@
 wygdgdrtdhqa 今天天气不错
 wqfkcqkrwftcujtn 你喜欢听什么音乐
-trwurmitwdtbwwft 我们缺少优秀人才
+trwurmitwdtbwwft 我们 缺少 优秀 人才
 ghowntdmbntgmfghrbtf 政府发布了年度财政报告
 trwusvtmflqtmgfnipnu  我们要向雷锋同志学习
-trxfhjgedbnbn  我真是受不了了
+trfhjgedbnbn  我真是受不了了
 
