Update test files

--- a/Python/test.in
+++ b/Python/test.in
@@ -1,8 +1,8 @@
-wygdgdrtdhqa 今天天气不错
-wqfkcqkrwftcujtn 你喜欢听什么音乐
-trwutfitwdtbwwft 我们 缺少 优秀 人才
-ghowntdmbntgmfghrbtf 政府发布了年度财政报告
-trwusvtmflqtmgfnipnu  我们要向雷锋同志学习
-trfhjgedbnbn  我真是受不了了
-ddpgvbftjgfhrqvb 大家好才是真的好
-
+wygdgdrtdhqa
+wqfkcqkrwftcujtn
+trwutfitwdtbwwft
+ghowntdmbntgmfghrbtf
+trwusvtmflqtmgfnipnu
+trfhjgedbnbn
+ddpgvbftjgfhrqvb
+#
